# narrassist

./: .gitignore  .pre-commit-config.yaml  AUDIT_RESULTS.md  BUGS_CRITICOS_ENCONTRADOS.md  CANCELLATION_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  EXPERT_REVIEW_FINDINGS.md  MULTI_PLATFORM_STATUS.md  PENDING_MACOS.md  PIPELINE_COMPLETE.md  PROJECT_STATUS.md  README.md  SETUP.md  coverage.json  debug_install.ps1  mkdocs.yml  package-lock.json  pip_audit_report.json  pyproject.toml  pytest.ini  test_attribute_debug.py  test_attribute_detailed.py  test_attribute_extraction.py  test_cache_writes.py  test_dependency.py  test_dependency_object.py  test_full_pipeline.py  test_fusion_suggestions.py  test_gender_debug.py  test_gender_debug2.py  test_gender_debug3.py  test_hotfix_v0_10_10.py  test_hotfix_v0_10_9.py  test_pipeline_direct.py  test_pipeline_direct2.py  test_possessive_debug.py  test_report_rich.md  test_run.ps1
.claude/: settings.json  settings.local.json
.claude/agents/: manuscript-security.md  narrative-reviewer.md  nlp-linguist.md  prompt-engineer.md
.claude/memory/: MEMORY.md
.claude/rules/: backend-nlp.md  frontend-vue.md  security.md
.github/: dependabot.yml
.github/workflows/: build-installers.yml  build-macos.yml  build-release.yml  build-windows.yml  ci.yml  release.yml
api-server/: README.md  build.py  build_bundle.spec  deps.py  main.py  middleware.py  requirements.txt  start_server.py
api-server/middleware/: timing.py
api-server/routers/: __init__.py  _alert_emission.py  _analysis_cache_helpers.py  _analysis_phases.py  _analysis_restoration.py  _analysis_runtime.py  _analysis_structure_helpers.py  _chat_rag.py  _consistency_subphases.py  _enrichment_cache.py  _enrichment_phases.py  _grammar_subphases.py  _incremental_planner.py  _invalidation.py  _llm_helpers.py  _partial_analysis.py  alerts.py  analysis.py  chapters.py  collections.py  content.py  editorial.py  editorial_work.py  entities.py  events.py  exports.py  history.py  license.py  projects.py  prose.py  relationships.py  services.py  system.py  voice_style.py
docs/: ADVERSARIAL_ANALYSIS_AND_IMPROVEMENT_PLAN.md  AMBIGUOUS_ATTRIBUTES.md  ARCHITECTURE_AUDIT_2026-02.md  ARCHITECTURE_REVIEW_2026-02-23.md  AUDIT_2026-02-23.md  AUDIT_2026_02_22_FASE3.md  AUDIT_INDEX.md  AUDIT_RESPONSE_TO_CODEX.md  BUILD_AND_DEPLOY.md  CASOS_USO_VENTAS_NARRATIVE_ASSISTANT.md  CHANGELOG.md  COREFERENCE_RESOLUTION.md  DEAD_CODE_SCAN_2026-02-18.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_BUILD.md  ENTITY_TIMELINE_ATTRIBUTES_AUDIT_2026-02-13.md  EVENTS_TAXONOMY_IMPLEMENTATION.md  EXPERT_REVIEW_v0.4.30.md  FRONTEND_TESTING_SETUP.md  FRONTEND_TESTS_STATUS.md  GITHUB_MAC_INSTALLERS.md  GLOSSARY_AUTO_POPULATION.md  GRAMMAR_STYLE_RULES.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_EXECUTION_READY_2026-02-13.md  INDEX.md  INSTALL_NPM.md  INTEGRATION_REVIEW_v0.3.34.md  LICENSING_PRODUCTION_PLAN.md  M3_CLUSTERING_OPTIMIZATION.md  MAINTENANCE.md  MYPY_ERRORS_REPORT.md  NEXT_STEPS.md  OPTIMIZATION_STATUS.md  PEER_REVIEW_2026-02-23.md  PENDING_ISSUES.md  PERFORMANCE_AUDIT.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS_COMPLETE.md  (+31 more)
docs/00-overview/: README.md  corrections-and-risks.md  goals-and-scope.md  mvp-definition.md
docs/01-theory/: README.md  heuristics-h1-world.md  heuristics-h2-characters.md  heuristics-h3-structure.md  heuristics-h4-voice.md  heuristics-h5-focalization.md  heuristics-h6-information.md
docs/02-architecture/: LICENSING.md  README.md  SECURITY.md  SETUP.md  data-model.md  database-schema.md  document-processing.md  enums-reference.md  extension-points.md  history-system.md  position-synchronization.md  progressive-analysis.md
docs/03-roadmap/: README.md  phase-0-setup.md  phase-1-mvp.md  phases-2-7-post-mvp.md  validation-milestones.md
docs/04-references/: README.md  glossary.md
docs/05-ui-design/: BACKEND_GAPS_ANALYSIS.md  README.md
docs/adr/: 001-sqlite-database.md  002-llm-local.md  005-primevue-ui.md  (+3 more)
docs_site/: index.md
examples/: README_TITLE_PREPROCESSING.md  title_preprocessing_demo.py
frontend/: DESIGN_SYSTEM.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
samples/: ERRORES_INTENCIONADOS.md  documento_prueba_completo.txt
scripts/: add_cache_writes.py  add_type_ignores.py  allow_narrative_assistant.sh  analyze_possessive_deps.py  benchmark_analysis.py  benchmark_ner.py  build_app_with_python_embed.py  build_backend_bundle.py  build_docs.bat  build_docs.sh  build_sidecar.py  build_thesaurus_db.py  check_contrast.mjs  check_project_status.py  check_schema_version.py  clean_type_ignores.py  cleanup_install.bat  clear_enrichment_cache.py  clear_queue.py  clear_stuck_analysis.py  configure_npm_path.sh  debug_attributes.py  debug_positions.py  diagnose_installation.sh  download_fonts.py  download_languagetool_jre.py  download_models.py  download_python_embed.py  evaluate_ner_metrics.py  evaluate_nlp_precision.py  find_unused_exports.sh  fix_bugbear_b007.py  fix_mypy_errors.py  generate_icons.py  generate_monthly_dashboard_excel.py  generate_tauri_keys.sh  inspect_heavy_queue.py  migrate_to_v29.py  ner_comprehensive_evaluation.py  ner_quick_evaluation.py  (+22 more)
src-tauri/: Cargo.toml  Entitlements.plist  README.md  nsis-hooks.nsi  tauri.conf.dev.json  tauri.conf.json
src-tauri/binaries/: start-backend.bat  start-backend.sh
src-tauri/binaries/backend/: requirements-nlp.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: download_models.py  install_deps_verbose.py  install_models.py  post_install.py
src-tauri/src/: cleanup.rs  main.rs  menu.rs
test_books/: README.md  don_quijote.epub  la_regenta.txt.utf8  la_regenta_clean.txt  la_regenta_sample.docx  test_document.txt  test_document_fresh.txt  test_document_rich.txt  test_simple.txt
test_scripts/: test_ner_direct.py  test_ner_pipeline.py  test_pipeline.py  test_report_rich.md  test_rich_document.py
tests/: __init__.py  conftest.py
(+1298 files in other folders)
