[package]
name = "narrative-assistant"
version = "0.11.5"
description = "Asistente de corrección narrativa para editores profesionales"
authors = ["TFM Team"]
license = "MIT"
repository = "https://github.com/pauubach/narrassist"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
